fix: footer widgets alignment

--- a/header-footer-grid/assets/css/style-rtl.css
+++ b/header-footer-grid/assets/css/style-rtl.css
@@ -449,10 +449,9 @@ body.menu_sidebar_slide_left.menu_sidebar_dropdown:before {
 .site-footer {
   position: relative;
   z-index: 10; }
-  .site-footer .item--inner {
+  .site-footer .item--inner:not([class*="widgets"]) {
     width: 100%;
-    max-width: 100%; }
-  .site-footer .builder-item {
+    max-width: 100%;
     align-items: center;
     display: flex; }
 
